[project]
name = "riscv-opcodes"
version = "0.1.0"
description = "Machine readable information about RISC-V instruction opcodes"
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "matplotlib>=3.9.0, <4",
]

[project.scripts]
riscv_opcodes = "riscv_opcodes.parse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/riscv_opcodes"]
