[project]
name = "riscv-opcodes"
version = "0.1.0"
description = "Machine readable information about RISC-V instruction opcodes"
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "matplotlib>=3.9.0, <4",
]

[dependency-groups]
dev = [
    # Code coverage tool, used in CI.
    "coverage >=7,<8"
]

[project.scripts]
riscv_opcodes = "riscv_opcodes.parse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"extensions" = "riscv_opcodes/extensions"
"arg_lut.csv" = "riscv_opcodes/arg_lut.csv"
"causes.csv" = "riscv_opcodes/causes.csv"
"csrs.csv" = "riscv_opcodes/csrs.csv"
"csrs32.csv" = "riscv_opcodes/csrs32.csv"
"encoding.h" = "riscv_opcodes/encoding.h"
